feat: add sitterApprove, sitterReject API
