# src/routes/v1/sitters.ts
@@ -1,17 +1,16 @@
 import express from 'express';
 
-import { applySitter, getSitterService, updateSitterService } from '@controllers/sitters';
+import { applySitter, getSitterService, sitterApprove, sitterReject, updateSitterService } from '@controllers/sitters';
 import { validateRequest } from '@middlewares/validateRequest';
-import {
-  applySitterRequestSchema,
-  getSitterServiceRequestSchema,
-  updateSitterServiceRequestSchema,
-} from '@schema/sitter';
+import { applySitterRequestSchema, sitterRequestSchema, updateSitterServiceRequestSchema } from '@schema/sitter';
 
 const router = express.Router();
 
 router.post('/apply-sitter', validateRequest(applySitterRequestSchema), applySitter);
-router.get('/sitters/:user_id', validateRequest(getSitterServiceRequestSchema), getSitterService);
+router.get('/sitters/:user_id', validateRequest(sitterRequestSchema), getSitterService);
 router.patch('/sitters', validateRequest(updateSitterServiceRequestSchema), updateSitterService);
+
+router.patch('/sitters/:user_id/approve', validateRequest(sitterRequestSchema), sitterApprove);
+router.patch('/sitters/:user_id/reject', validateRequest(sitterRequestSchema), sitterReject);
 
 export default router;
